--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 
   <title>IFSC 3610 | Kalyn Huselton</title>
   <meta name="description" content="Keyword Rich Description" />
-  <meta name="author" content="Your Name" />
+  <meta name="author" content="Kalyn Huselton" />
 
 </head>
 
 <body>
   <h1>Kalyn Huselton</h1>
+  <a href="it-amethyst/prototype/index.html">Prototype</a>
 </body>
 </html>
 view raw
