--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 <body>
   <h1>Kalyn Huselton</h1>
   <a href="it-amethyst/prototype/index.html">Prototype</a>
+    <a href="it-amethyst/gordo/index.html">Gordo Assignment</a>
 </body>
 </html>
-view raw
