--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <h1>Kalyn Huselton</h1>
-  <a href="it-amethyst/prototype/index.html">Prototype</a>
-    <a href="it-amethyst/gordo/index.html">Gordo Assignment</a>
+  <a href="prototype/index.html">Prototype</a>
+    <a href="gordo/index.html">Gordo Assignment</a>
 </body>
 </html>
