--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
   <title>IFSC 3610 | Kalyn Huselton</title>
   <meta name="description" content="Keyword Rich Description" />
   <meta name="author" content="Kalyn Huselton" />
+  <link rel="stylesheet" href="assets/css/style.css" type="text/css" media="all" />
 
 </head>
 
 <body>
+  <header>
   <h1>Kalyn Huselton</h1>
+  </header>
   <a href="css-demo/index.html">CSS Demo</a>
     <a href="gordo/index.html">Gordo Assignment</a>
 </body>
