--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
   <header>
   <h1>Kalyn Huselton</h1>
   </header>
-  <a href="css-demo/index.html">CSS Demo</a>
-    <a href="gordo/index.html">Gordo Assignment</a>
+  <ul>
+  <li><a href="css-demo/index.html">CSS Demo</a></li>
+    <li><a href="gordo/index.html">Gordo Assignment</a></li>
+    <li><a href="assets/img/gridgarden.png">Grid Garden Screenshot</a></li>
+    <li><a href="positioning-lab/float-1.html">Float 1</a></li>
+    <li><a href="positioning-lab/float-2.html">Float 2</a></li>
+    <li><a href="positioning-lab/absolute-1.html">Absolute 1</a></li>
+    <li><a href="positioning-lab/absolute-2.html">Absolute 2</a></li>
+    </ul>
 </body>
 </html>
