--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <li><a href="positioning-lab/float-2.html">Float 2</a></li>
     <li><a href="positioning-lab/absolute-1.html">Absolute 1</a></li>
     <li><a href="positioning-lab/absolute-2.html">Absolute 2</a></li>
+    <li><a href="webformvalidation/index.html">Web Form Validation</a></li>
+
     </ul>
 </body>
 </html>
