--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <li><a href="positioning-lab/absolute-1.html">Absolute 1</a></li>
     <li><a href="positioning-lab/absolute-2.html">Absolute 2</a></li>
     <li><a href="webformvalidation/index.html">Web Form Validation</a></li>
+        <li><a href="jqueryvalidation/index.html">jQuery Validation</a></li>
+
 
     </ul>
 </body>
