--- a/jqueryvalidation/index.html
+++ b/jqueryvalidation/index.html
@@ -2,15 +2,20 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="assets/css/style.css"/>
+        <script src="assets/js/script.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/jquery.validate.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/additional-methods.min.js"></script>
     </head>
     <body>
     <h1>New Patient Registration</h1>
     <h4>Please fill out the form below</h4>
     <!--Form Starts Here-->
-    <form action="https://brucebauer.info/assets/ITEC3650/datadump.php">
+    <form id="validationform" action="https://brucebauer.info/assets/ITEC3650/datadump.php">
 <!--Name-->
   <label for="firstname" class="formlabel">First Name:</label>
-  <input type="text" name="firstname" size="30" maxlength="30" required><br>
+  <input type="text" name="firstname" size="30" maxlength="30" required data-msg-required="First Name is Required">
+  <label for="firstname" class="error"></label><br>
   <label for="middleinitial" class="formlabel">Middle Initial:</label>
   <input type="text" name="middleinitial" size="1" maxlength="1"><br>
   <label for="lastname" class="formlabel">Last Name:</label>
