Marilla Final and Homepage Styling

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   <meta name="description" content="Keyword Rich Description" />
   <meta name="author" content="Kalyn Huselton" />
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" media="all" />
-
+<link rel="stylesheet" href="https://use.typekit.net/eqo5txk.css">
+<link rel="stylesheet" href="https://use.typekit.net/eqo5txk.css">
 </head>
 
 <body>
   <header>
-  <h1>Kalyn Huselton</h1>
+  <h1>Kalyn Huselton | ITEC</h1>
   </header>
   <ul>
   <li><a href="css-demo/index.html">CSS Demo</a></li>
@@ -25,7 +26,8 @@
     <li><a href="positioning-lab/absolute-2.html">Absolute 2</a></li>
     <li><a href="webformvalidation/index.html">Web Form Validation</a></li>
         <li><a href="jqueryvalidation/index.html">jQuery Validation</a></li>
-        <li><a href="marilla/index.html">Marilla Site | In place of SpaceX</a></li>
+        <li><a href="marilla/index.html">Marilla Draft Site | In place of SpaceX</a></li>
+        <li><a href="marilla-final/index.html">Marilla Final Site | In place of SpaceX</a></li>
 
 
     </ul>
