--- a/index.html
+++ b/index.html
@@ -25,9 +25,14 @@
     <li><a href="positioning-lab/absolute-1.html">Absolute 1</a></li>
     <li><a href="positioning-lab/absolute-2.html">Absolute 2</a></li>
     <li><a href="webformvalidation/index.html">Web Form Validation</a></li>
-        <li><a href="jqueryvalidation/index.html">jQuery Validation</a></li>
-        <li><a href="marilla/index.html">Marilla Draft Site | In place of SpaceX</a></li>
-        <li><a href="marilla-final/index.html">Marilla Final Site | In place of SpaceX</a></li>
+  <li><a href="jqueryvalidation/index.html">jQuery Validation</a></li>
+  <li><a href="marilla/index.html">Marilla Draft Site | In place of SpaceX</a></li>
+  <li><a href="marilla-final/index.html">Marilla Final Site | In place of SpaceX</a></li>
+  <li><a href="cycle/index.html">jQuery Lab</a></li>
+  <li><a href="forex/index.html">Forex</a></li>
+  <li><a href="calculator/index.html">Calculator</a></li>
+
+
 
 
     </ul>
