--- a/circle/index.html
+++ b/circle/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Circle Calculations</title>
+    <title>Circle</title>
     <meta charset ="utf-8"> 
-    <link rel="stylesheet" href="assets/css/style.css">
-    <script src="assets/js/script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/jquery.validate.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/additional-methods.min.js"></script>
+    <script src="assets/js/script.js"></script>
 </head>
 
 <body>
-    <form id="CircleForm">
+    <form id="CircleForm" onsubmit="return false">
         <h2>Circle Calculations</h2>
-        <label for="radius" id="formlabel">Enter radius of a circle:</label>
+        <label for="radius" class="formlabel">Enter radius of a circle:</label>
         <input type="text" id="radius" name="radius"
                data-rule-required="true"  data-msg-required="Radius is Required" 
                data-rule-number="true" data-msg-number="Radius must be floating point number"
@@ -21,12 +20,18 @@
         <label for="radius" class="error" id="radiuserror"></label>
         <br>
         
-        <label for="diameter" class="formlabel">Diameter:</label><span id="diameter"></span><br>
-        <label for="circumference" class="formlabel">Circumference:</label><span id="circumference"></span><br>
-        <label for="area" class="formlabel">Area:</label><span id="area"></span><br>
+        <label for="diameter" class="formlabel">Diameter:</label>
+        <span id="diameter"></span>
+        <br>
+        <label for="circumference" class="formlabel">Circumference:</label>
+        <span id="circumference"></span>
+        <br>
+        <label for="area" class="formlabel">Area:</label>
+        <span id="area"></span>
+        <br>
         <br><br>
-        <input type="submit" value="Calculate" id="btnSubmit">
-        <input type="submit" value="Clear" id="btnSubmit">
+        <input type="submit" value="Calculate" id="btnCalc" onclick="displayCalculations()">
+        <input type="submit" value="Clear" id="btnClear" onclick="clearForm()">
     </form>
 </body>
 </html>
