--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   <li><a href="marilla/index.html">Marilla Draft Site | In place of SpaceX</a></li>
   <li><a href="marilla-final/index.html">Marilla Final Site | In place of SpaceX</a></li>
   <li><a href="cycle/index.html">jQuery Lab</a></li>
-  <li><a href="forex/index.html">Forex</a></li>
   <li><a href="calculator/index.html">Calculator</a></li>
+  <li><a href="circle/index.html">Circle</a></li>
 
 
 
