--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <li><a href="cycle/index.html">jQuery Lab</a></li>
   <li><a href="calculator/index.html">Calculator</a></li>
   <li><a href="circle/index.html">Circle</a></li>
+  <li><a href="unitconversion/index.html">Unit Conversion</a></li>
 
 
 
