--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <li><a href="calculator/index.html">Calculator</a></li>
   <li><a href="circle/index.html">Circle</a></li>
   <li><a href="unitconversion/index.html">Unit Conversion</a></li>
+  <li><a href="marsroverphotoexplorer/index.html">Technical Assessment/Mars Rover</a></li>
 
 
 
